--- a/views/register.html
+++ b/views/register.html
@@ -41,44 +41,45 @@
             </nav>
     </header>
         <!-- Formulario de registro -->
+
         <form action="#" method="post" class="form-registro">
-            <div class="control-formulario">
-                <label>Nombre y Apellido</label>
-                <input type="text" name="nombre" class="control">
-            </div>
-            <div class="control-formulario">
-                <label>Nombre de usuari@</label>
-                <input type="text" name="usuario"class="control">
-            </div>
-            <div>
-                <label>Fecha de Nacimiento</label>
-                <input type="date">
-            </div>
-            <div class="control-formulario">
-                <label>Domicilio</label>
-                <input type="text" name="domicilio"class="control">
-            </div>
-            <div class="control-formulario">
-                <label for="perfil">Perfil de usuario</label>
-                <input type="radio" name="perfil" value="Comprador">
-                <label>Comprador</label>
-                <input type="radio" name="perfil" value="Vendedor">
-                <label>Vendedor</label>
-            </div>
+            <h3>Registro de nuevo Usuario</h3>
+                <div class="control-formulario">
+                    <label>Nombre y Apellido</label>
+                    <input type="text" name="nombre" class="control">
+                </div>
+                <div class="control-formulario">
+                    <label>Nombre de usuari@</label>
+                    <input type="text" name="usuario"class="control">
+                </div>
+                <div>
+                    <label>Fecha de Nacimiento</label>
+                    <input type="date">
+                </div>
+                <div class="control-formulario">
+                    <label>Domicilio</label>
+                    <input type="text" name="domicilio"class="control">
+                </div>
+                <div class="control-formulario">
+                    <h4>Perfil de usuario</h4>
+                    <label for="perfil">
+                    <input type="radio" name="perfil" value="Comprador">Comprador
+                    <input type="radio" name="perfil" value="Vendedor">Vendedor
+                    </label>
+                </div>
+
             <div class="caja-checkbox">
                 <h3>Interes</h3>
-                <label>Electro</label>
-                <input type="checkbox" name="interes" value="Electro">
-                <label>Moda</label>
-                <input type="checkbox" name="interes" value="Moda">
-                <label>Hogar</label>
-                <input type="checkbox" name="interes" value="Hogar">
-                <label>Jugueteria</label>
-                <input type="checkbox" name="interes" value="Jugueteria">
-                <labe>Vida Sana</labe>
-                <input type="checkbox" name="interes" value="Vida Sana">
+                <label for="intereses">
+                <input type="checkbox" name="interes" value="Electro" id="electro">Electro
+                <input type="checkbox" name="interes" value="Moda" id="moda">Moda
+                <input type="checkbox" name="interes" value="Hogar" id="hogar">Hogar
+                <input type="checkbox" name="interes" value="Jugueteria" id="jugueteria">Jugueteria
+                <input type="checkbox" name="interes" value="Vida Sana" id="vida-sana">Vida Sana
+                </label>
             </div>
             <div class="foto">
+                <h4>Cargar foto</h4>
                 <img src="#" alt="imagen de perfil">
             </div>
             <div>
