--- a/views/login.html
+++ b/views/login.html
@@ -34,8 +34,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul class="nav-var-dos">
-                    <li><a href="#">Creá tu cuentas</a><i class="fas fa-address-card"></i></li>
-                    <li><a href="#">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                    <li><a href="/register">Creá tu cuentas</a><i class="fas fa-address-card"></i></li>
+                    <li><a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
                     <li><a href="#">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
                 </ul>
             </nav>
@@ -48,7 +48,7 @@
         <div>
             <input type="password" value="Password">
         </div>
-        <input type="submit" class="boton-registro" value="Enviar">
+            <input type="submit" class="boton-registro" value="Enviar">
     </form>
 </body>
 </html>
